--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,49 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8">
-  <title>GauliaTech</title>
+  <title>Gaulia Tech - Consultoria em Tecnologia</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <!-- Favicon -->
+<!-- Favicons para tema claro -->
+<link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-dark-16x16.png" media="(prefers-color-scheme: light)">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-dark-32x32.png" media="(prefers-color-scheme: light)">
+<link rel="icon" type="image/png" sizes="48x48" href="assets/img/favicon-dark-48x48.png" media="(prefers-color-scheme: light)">
+
+<!-- Favicons para tema escuro -->
+<link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-light-16x16.png" media="(prefers-color-scheme: dark)">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-light-32x32.png" media="(prefers-color-scheme: dark)">
+<link rel="icon" type="image/png" sizes="48x48" href="assets/img/favicon-light-48x48.png" media="(prefers-color-scheme: dark)">
+
+<!-- Fallback padrão -->
+
+
+  <link rel="apple-touch-icon" sizes="32x32" href="assets/img/favicon-dark-32x32.png">
+  
+  <!-- Meta tags para SEO -->
+  <meta name="description" content="Gaulia Tech - Empresa de consultoria em tecnologia especializada em desenvolvimento web, aplicações móveis, cloud computing e soluções digitais inovadoras.">
+  <meta name="keywords" content="tecnologia, consultoria, desenvolvimento web, aplicações móveis, cloud computing, TI, digital">
+  <meta name="author" content="Gaulia Tech">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://gauliatech.com/">
+  <meta property="og:title" content="Gaulia Tech - Consultoria em Tecnologia">
+  <meta property="og:description" content="Soluções tecnológicas inovadoras para transformar seu negócio digital.">
+  <meta property="og:image" content="assets/img/LOGO PRETO SEM FUNDO.png">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://gauliatech.com/">
+  <meta property="twitter:title" content="Gaulia Tech - Consultoria em Tecnologia">
+  <meta property="twitter:description" content="Soluções tecnológicas inovadoras para transformar seu negócio digital.">
+  <meta property="twitter:image" content="assets/img/LOGO PRETO SEM FUNDO.png">
+  
+  <!-- Preconnect para performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
   <app-root></app-root>
