feat: enable SSR and improve SEO

--- a/src/index.html
+++ b/src/index.html
@@ -32,18 +32,33 @@
   <meta property="og:url" content="https://gauliatech.com/">
   <meta property="og:title" content="Gaulia Tech - Consultoria em Tecnologia">
   <meta property="og:description" content="Soluções tecnológicas inovadoras para transformar seu negócio digital.">
-  <meta property="og:image" content="assets/img/LOGO PRETO SEM FUNDO.png">
+  <meta property="og:image" content="assets/img/logo-preto-sem-fundo.png">
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://gauliatech.com/">
   <meta property="twitter:title" content="Gaulia Tech - Consultoria em Tecnologia">
   <meta property="twitter:description" content="Soluções tecnológicas inovadoras para transformar seu negócio digital.">
-  <meta property="twitter:image" content="assets/img/LOGO PRETO SEM FUNDO.png">
+  <meta property="twitter:image" content="assets/img/logo-preto-sem-fundo.png">
   
   <!-- Preconnect para performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Gaulia Tech",
+      "url": "https://gauliatech.com/",
+      "logo": "assets/img/logo-preto-sem-fundo.png",
+      "sameAs": [
+        "https://www.linkedin.com/company/gaulia-tech",
+        "https://github.com/gauliatech",
+        "https://twitter.com/gauliatech",
+        "https://www.instagram.com/gauliatech"
+      ]
+    }
+  </script>
 </head>
 <body>
   <app-root></app-root>
