--- a/src/index.html
+++ b/src/index.html
@@ -23,23 +23,29 @@
   <link rel="apple-touch-icon" sizes="32x32" href="assets/img/favicon-dark-32x32.png">
   
   <!-- Meta tags para SEO -->
-  <meta name="description" content="Gaulia Tech - Empresa de consultoria em tecnologia especializada em desenvolvimento web, aplicações móveis, cloud computing e soluções digitais inovadoras.">
-  <meta name="keywords" content="tecnologia, consultoria, desenvolvimento web, aplicações móveis, cloud computing, TI, digital">
+  <meta name="description" content="Gaulia Tech oferece soluções completas em tecnologia, desenvolvimento de software, consultoria em TI e inovação digital para empresas.">
+  <meta name="keywords" content="tecnologia, desenvolvimento, software, consultoria TI, inovação digital, Gaulia Tech">
   <meta name="author" content="Gaulia Tech">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="pt-BR">
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://gauliatech.com/">
-  <meta property="og:title" content="Gaulia Tech - Consultoria em Tecnologia">
-  <meta property="og:description" content="Soluções tecnológicas inovadoras para transformar seu negócio digital.">
-  <meta property="og:image" content="assets/img/logo-preto-sem-fundo.png">
+  <meta property="og:title" content="Gaulia Tech - Soluções em Tecnologia e Inovação">
+  <meta property="og:description" content="Gaulia Tech oferece soluções completas em tecnologia, desenvolvimento de software, consultoria em TI e inovação digital para empresas.">
+  <meta property="og:image" content="https://gauliatech.com/assets/img/LOGO_PRETO_OTIMIZADO.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:site_name" content="Gaulia Tech">
+  <meta property="og:locale" content="pt_BR">
   
   <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://gauliatech.com/">
-  <meta property="twitter:title" content="Gaulia Tech - Consultoria em Tecnologia">
-  <meta property="twitter:description" content="Soluções tecnológicas inovadoras para transformar seu negócio digital.">
-  <meta property="twitter:image" content="assets/img/logo-preto-sem-fundo.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://gauliatech.com/">
+  <meta name="twitter:title" content="Gaulia Tech - Soluções em Tecnologia e Inovação">
+  <meta name="twitter:description" content="Gaulia Tech oferece soluções completas em tecnologia, desenvolvimento de software, consultoria em TI e inovação digital para empresas.">
+  <meta name="twitter:image" content="https://gauliatech.com/assets/img/LOGO_PRETO_OTIMIZADO.png">
   
   <!-- Preconnect para performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
