deploy: b0a524825918280e94ec0baf22963737f7e91a9f

--- a/browser/index.html
+++ b/browser/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Gaulia Tech - Consultoria em Tecnologia</title>
-  <base href="/gaulia-tech/">
+  <base href="/GauliaTechWebsite/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <!-- Favicon -->
